Bug fix: Misaligned checkboxes on Linux (issue #117)

--- a/src/pages/clippingsMgr.css
+++ b/src/pages/clippingsMgr.css
@@ -214,7 +214,8 @@ input[type="checkbox"] + label {
     vertical-align: 0;
 }
 
-body[data-os="win"] input[type="checkbox"] + label {
+body[data-os="win"] input[type="checkbox"] + label,
+body[data-os="linux"]:not([data-laf="true"]) input[type="checkbox"] + label {
     vertical-align: 3px;
 }
 
