--- a/src/pages/new.css
+++ b/src/pages/new.css
@@ -88,7 +88,8 @@ input[type="checkbox"] + label {
     vertical-align: 0;
 }
 
-body[data-os="win"] input[type="checkbox"] + label {
+body[data-os="win"] input[type="checkbox"] + label,
+body[data-os="linux"]:not([data-laf="true"]) input[type="checkbox"] + label {
     vertical-align: 3px;
 }
 
